Version mobile fixed
Filter bar FIx
Problem à 320 de largeur les filtres sortait de l'écran
Solution: réduire taille icon et h4

--- a/css/style.css
+++ b/css/style.css
@@ -699,9 +699,23 @@ footer div h3 {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 50px 50px ;
     }
-    
+
+    .filter-bar div {
+        padding: 4px 11px;
+    }
+
+    .filter-bar .fa-solid::before {
+        font-size: 20px;
+        width: 18px;
+    }
+
     .firsth4 {
         grid-column: 1/3;
+        font-size: 16px;
+    }
+
+    .filter-bar h4 {
+        font-size: 14px;
     }
 
     .inf-sub {
